# ToDoSync

mobile/: build.gradle.kts  settings.gradle.kts
mobile/app/: build.gradle.kts
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/example/todosync/: MainActivity.kt  ToDoSyncApplication.kt
mobile/app/src/main/java/com/example/todosync/activities/: MainActivity.kt  TaskListsActivity.kt  TaskViewsActivity.kt  TasksActivity.kt
mobile/app/src/main/java/com/example/todosync/factories/: TcpViewModelFactory.kt
mobile/app/src/main/java/com/example/todosync/models/: Task.kt  TaskList.kt  User.kt
mobile/app/src/main/res/layout/: activity_main.xml
mobile/app/src/main/res/values/: strings.xml  themes.xml
mobile/app/src/main/res/values-night/: themes.xml
mobile/gradle/: libs.versions.toml
mobile/gradle/wrapper/: gradle-wrapper.properties
server/: .clang-format  CMakeLists.txt  DOCS.md  Dockerfile  docker-compose.yml  main.cpp
server/build_cmd/: .gitignore  build_cmd.sh
server/include/TDS/: OperationService.hpp  Parser.hpp  Repository.hpp  Server.hpp  Validator.hpp  exceptions.hpp  types.hpp
server/src/: OperationService.cpp  Parser.cpp  Repository.cpp  Server.cpp  Validator.cpp  exceptions.hpp  main.cpp  types.hpp
server/src/operation_service/: OperationService.cpp  OperationService.hpp
server/src/parser/: Parser.cpp  Parser.hpp
server/src/repository/: Repository.cpp  Repository.hpp
server/src/server/: Server.cpp  Server.hpp
server/src/validator/: Validator.cpp  Validator.hpp
(+11 files in other folders)
